--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -1,7 +1,10 @@
 os_packages:
+  - php
+  - php-fpm # serve PHP sites via FastCGI
   - golang # needed to build Caddy from source or use Hugo modules
   - fd-find # find alternative
   - zoxide # navigate filesystem faster
+  - tldr # use until tealdeer is available
 
 uninstall_packages:
   - apache2 # we're using Caddy instead
