--- a/roles/new-linode_harden/tasks/main.yml
+++ b/roles/new-linode_harden/tasks/main.yml
@@ -15,4 +15,23 @@
 # don't rely on the order in which handlers are written down, which seems fragile
 # https://github.com/sunrisemovement/devops/issues/7
 
+- name: Install PAM on Alpine Linux
+  package:
+    name: openssh-server-pam
+    state: present
+  when: ansible_os_family == 'Alpine'
+
+- name: Make sure PAM is enabled to enforce password change
+  lineinfile:
+    dest: /etc/ssh/sshd_config
+    regexp: "^UsePAM"
+    insertafter: '^#UsePAM '
+    line: "UsePAM yes"
+    state: present
+  notify:
+  - restart ssh
+  - force change password
+
+# Before you run any other Ansible plays, you'll have to ssh in to change your password.
+
 # Also, consider switching to Linode's latest kernel to improve security.
