caddy: configure Caddy + php-fpm on Alpine Linux
php-fpm on Alpine Linux does not default to using a Unix socket. I
don't know enough to have an opinion on whether this is good or not,
but it seems good to support this option, even if technically I could
simply change the php-fpm config to use a Unix socket, as Arch and
Ubuntu do by default.

--- a/roles/sunrise/tasks/caddy.yml
+++ b/roles/sunrise/tasks/caddy.yml
@@ -9,6 +9,8 @@
     group: root
     # Arch Linux thinks this is an executable and won't run without x
     mode: u=rwx,g=rx,o=rx
+  when:
+    - ansible_os_family == 'Archlinux' or ansible_os_family == 'Debian'
   notify:
     - daemon-reload restart caddy
   tags: caddy_service
