--- a/roles/sunrise/vars/Alpine.yml
+++ b/roles/sunrise/vars/Alpine.yml
@@ -10,3 +10,11 @@ os_packages:
   - php8-fpm # serve PHP sites via FastCGI
   - go # needed to build Caddy from source or use Hugo modules
   - hugo # static site generator https://gohugo.io/
+
+web_server_user: caddy
+
+# https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
+# check /etc/php8/php-fpm.d/www.conf for location of socket
+# should be line like "listen = 127.0.0.1:9000"
+php_fpm_socket: 127.0.0.1:9000
+php_fpm_service_name: php-fpm8
