motd: add motd for Arch and Alpine
Alpine's motd invites you to edit it, and Arch didn't ship with an
motd. So I made a quick one (based on our html test page) to use on
those distros.

--- a/roles/sunrise/tasks/motd.yml
+++ b/roles/sunrise/tasks/motd.yml
@@ -37,6 +37,13 @@
   notify:
   - update motd-news service
 
+- name: install motd from template
+  template:
+    src: motd.j2
+    dest: /etc/motd
+    mode: 0755
+  when: ansible_os_family == 'Archlinux' or ansible_os_family == 'Alpine'
+
 - name: Ensure your_ip.sh is installed, telling you your IP on login
   copy:
     src: your_ip.sh
