--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -1,6 +1,7 @@
 common_packages:
   - acl # allows becoming unprivileged user (for git clone)
   - bat # cat alternative
+  - chezmoi # bring your personal dotfiles to the server
   - exa # ls alternative
   - fish # Nelson's favorite shell
   - git # check out git repositories
@@ -8,7 +9,7 @@ common_packages:
   - mosh # better than SSH over crappy/mobile connections
   - neofetch # show OS details
   - ripgrep # recursively searches directories for a regex
-  - zoxide #smarter cd command - navigate filesystem faster
+  - zoxide # smarter cd command - navigate filesystem faster
 
 default_pass: "$6$mysecretsalt$KX2mLFmN1x9gF/urPk7EpzaMJMcY4yoFetMlQw0W9Lm2MJZ8cVI/7dk25PVyb6cLx7IUwTxON5HucMHOdsP.Y0"
 admin_email: skyfaller@gmail.com
