install dust on Arch and Alpine
Sometimes when you run out of disk space on a web server you need to
figure out quickly what to jettison! dust can help

--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -1,5 +1,6 @@
 os_packages:
   - base-devel # needed for AUR
+  - dust # visualize disk space use
   - fd # find alternative
   - rsync # dependency for "synchronize" Ansible module
   - php
