--- a/roles/sunrise/vars/Alpine.yml
+++ b/roles/sunrise/vars/Alpine.yml
@@ -4,6 +4,7 @@ os_packages:
   - libuser # manually change user's shell with lchsh:
   # https://wiki.alpinelinux.org/wiki/Change_default_shell
   - tzdata # needed to set timezone
+  - dust # visualize disk space use
   - caddy # web server https://caddyserver.com/
   - caddy-openrc # try installing default OpenRC init scripts, might clash with Caddyfile
   - php8
