--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -12,6 +12,8 @@ os_packages:
 
 web_server_user: caddy
 
+caddy_binary_location: /usr/bin/caddy
+
 # https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
 # check /etc/php/php-fpm.d/www.conf for location of unix socket
 # should be line like "listen = /run/php-fpm/php-fpm.sock"
