--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -14,7 +14,7 @@ uninstall_packages:
 sudoing_group: sudo
 web_server_user: www-data
 
-# caddy_binary_location: /usr/bin/caddy
+caddy_binary_location: /usr/bin/caddy
 
 # https://stackoverflow.com/questions/17570658/how-to-find-my-php-fpm-sock
 # Check /etc/php/7.4/fpm/pool.d/www.conf for location of unix socket
