--- a/roles/sunrise/vars/Alpine.yml
+++ b/roles/sunrise/vars/Alpine.yml
@@ -5,12 +5,14 @@ os_packages:
   # https://wiki.alpinelinux.org/wiki/Change_default_shell
   - tzdata # needed to set timezone
   - dust # visualize disk space use
+  - chezmoi # bring your personal dotfiles to the server
   - caddy # web server https://caddyserver.com/
   - caddy-openrc # try installing default OpenRC init scripts, might clash with Caddyfile
   - php8
   - php8-fpm # serve PHP sites via FastCGI
   - go # needed to build Caddy from source or use Hugo modules
   - hugo # static site generator https://gohugo.io/
+
 
 web_server_user: caddy
 
