Ubuntu: remove another apache2 package
Not sure if this is actually necessary, don't feel like taking chances
right now.

--- a/roles/sunrise/vars/Ubuntu.yml
+++ b/roles/sunrise/vars/Ubuntu.yml
@@ -7,6 +7,7 @@ os_packages:
 
 uninstall_packages:
   - apache2 # we're using Caddy instead
+  - apache2-bin
   - apache2-data
   - apache2-utils
   - ssl-cert
