Hugo: add Dr. McFadden's website
Don't forget to add websites to the Caddyfile! I'm doing it manually
for now, in part because certain details like the
Content-Security-Policy are different every time. In the future, maybe
we can automate this through templating as well?

--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -56,3 +56,7 @@ hugo_sites:
     domain: oahspesales.com
     subdomain: www
     content_repo: https://git.sr.ht/~skyfaller/oahspesales.com
+  - title: McFadden Mental Health
+    domain: robertmcfaddenmd.com
+    subdomain: www
+    content_repo: https://git.sr.ht/~skyfaller/robertmcfaddenmd.com
