--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,12 @@
 	"editor.detectIndentation": false,
 	"files.trimTrailingWhitespace": true,
 	"files.insertFinalNewline": true,
+	"[caddyfile]": {
+		"editor.formatOnSave": false
+	},
+	"[markdown]": {
+		"files.trimTrailingWhitespace": false
+	},
 	"[yaml]": {
 		"editor.insertSpaces": true,
 		"editor.tabSize": 2,
