Add wilsonbr pinebook ssh keys

--- a/roles/new-linode_initiate-users/vars/main.yml
+++ b/roles/new-linode_initiate-users/vars/main.yml
@@ -5,6 +5,7 @@ users:
     password: "{{ default_pass }}"
     sshKey:
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIMSoD1EE/VdDb9mBYDsebsIVowqhfvNWYhe2YBcfNeTo wilsonbr@cthulu2
+      - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIM5luwrRmBK+XE2zyy3MhxaaP6/Ua8yhIHwIgYJvBN1d wilsonbr@woody
   - name: nelson
     password: "{{ default_pass }}"
     sshKey:
