--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -19,6 +19,7 @@ users:
     shell: /usr/bin/fish
     sshKey:
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIMSoD1EE/VdDb9mBYDsebsIVowqhfvNWYhe2YBcfNeTo wilsonbr@cthulu2
+      - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIM5luwrRmBK+XE2zyy3MhxaaP6/Ua8yhIHwIgYJvBN1d wilsonbr@woody
   - name: nelson
     password: "{{ default_pass }}"
     shell: /usr/bin/fish
