--- a/roles/sunrise/tasks/caddy.yml
+++ b/roles/sunrise/tasks/caddy.yml
@@ -155,6 +155,16 @@
 #   notify:
 #     - restart caddy
 
+# Spurred to do this by the following error:
+# Mar 17 13:50:11 america caddy[5888]: 2022/03/17 13:50:11 failed to sufficiently increase receive buffer size (was: 208 kiB, wanted: 2048 kiB, got: 416 kiB).
+# See https://github.com/lucas-clemente/quic-go/wiki/UDP-Receive-Buffer-Size for details.
+# https://docs.ansible.com/ansible/latest/collections/ansible/posix/sysctl_module.html
+- name: increase maximum UDP Receive Buffer Size
+  sysctl:
+    name: net.core.rmem_max
+    value: '2500000'
+    sysctl_set: yes
+
 - name: start and enable caddy service
   service:
     name: caddy
