serve static archives of Wordpress sites
Wordpress is annoyingly complex to host. Hosting static files is much
simpler, and more similar to the Hugo hosting we're already doing.

Therefore, rather than spinning up actual Wordpress installs, for now
I'm going to use a plugin to make a static archive of each Wordpress
site and publish that:
https://wordpress.org/plugins/simply-static/

There are a number of downsides, including losing functions like
search (a feature of Simply Static's pro version).

Most annoyingly, this method relies on there being a copy of Wordpress
running somewhere. So, unless I commit to moving a website off of
Wordpress, and never making any more edits to the site in Wordpress,
I still either have to leave the old server running or install a real
copy of Wordpress on the new server. Or install Wordpress on each
local dev machine and run builds locally, or subscribe to some paid
static Wordpress hosting platform...

--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -9,6 +9,7 @@ common_packages:
   - neofetch # show OS details
   - ripgrep # recursively searches directories for a regex
   - zoxide # smarter cd command - navigate filesystem faster
+  - unzip # make unarchive work
 
 default_pass: "$6$mysecretsalt$KX2mLFmN1x9gF/urPk7EpzaMJMcY4yoFetMlQw0W9Lm2MJZ8cVI/7dk25PVyb6cLx7IUwTxON5HucMHOdsP.Y0"
 admin_email: skyfaller@gmail.com
@@ -62,3 +63,7 @@ hugo_sites:
     domain: robertmcfaddenmd.com
     subdomain: www
     content_repo: https://git.sr.ht/~skyfaller/robertmcfaddenmd.com
+
+static_wp_sites:
+  - subdomain: static
+    domain_name: skyfaller.space
