--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -187,3 +187,7 @@
 #     name: postfix
 
 # TODO: install Wordpress
+- name: set up static archives of Wordpress sites
+  import_tasks: static_wordpress.yml
+  tags:
+  - static_wordpress
