ufw: temporarily disable in Alpine
ufw doesn't work in Alpine right now, we need to fix it or find some
other way to configure a firewall using Ansible.

--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -147,6 +147,8 @@
   import_tasks: ufw.yml
   tags:
   - ufw
+  when: ansible_os_family != 'Alpine'
+# this is bad, we'll need a firewall before we use Alpine in production
 
 # TODO: fail2ban?
 
