comment out static_wordpress
I don't want to store the static Wordpress archives in the repo
because they're big binaries. So uncomment this to run it if you
have the archives on your machine.

--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -189,7 +189,7 @@
 #     name: postfix
 
 # TODO: install Wordpress
-- name: set up static archives of Wordpress sites
-  import_tasks: static_wordpress.yml
-  tags:
-  - static_wordpress
+# - name: set up static archives of Wordpress sites
+#   import_tasks: static_wordpress.yml
+#   tags:
+#   - static_wordpress
