linode_create: don't install pip/python on macOS
Homebrew can't run as root, and I don't know how to prevent it from
running as root in this play, since sudo power is needed elsewhere.

--- a/roles/new-linode_create/tasks/main.yml
+++ b/roles/new-linode_create/tasks/main.yml
@@ -2,12 +2,16 @@
   include_vars: "{{ ansible_os_family }}.yml"
   tags:
   - always
+  when: ansible_os_family != 'Darwin'
 
 - name: install pip (and any future requirements)
   package:
     name: '{{ item }}'
   loop: "{{ packages }}"
   become: true
+  when: ansible_os_family != 'Darwin'
+  # install 'python' manually in Homebrew on macOS
+  # or, figure out how to not run Homebrew as root in this play
 
 # TIP: If Ansible can't find pip, check your inventory for
 # ansible_python_interpreter and see if it's using the right location/version
