--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -107,7 +107,7 @@
 # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/hostname_module.html
 - name: set system's hostname
   hostname:
-    name: {{ local_hostname }}
+    name: "{{ local_hostname }}"
     # use: redhat # required on Alpine Linux: https://github.com/ansible/ansible/issues/77363
   tags:
   - hostname
