hostname: fixed on Alpine Linux in latest Ansible
I reported a bug and they fixed it!

--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -109,6 +109,7 @@
   hostname:
     name: "{{ local_hostname }}"
     # use: redhat # required on Alpine Linux: https://github.com/ansible/ansible/issues/77363
+    # only for Ansible versions < 2.12.5 tho
   tags:
   - hostname
   when: ansible_os_family != 'Alpine'
