static Wordpress version of stairball.club
I'm not adding the static zip once again, because we don't want to
store large binaries in this repo unnecessarily.

Also, because of DNS annoyances we're testing it at
static.stairball.org for now.

--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -67,3 +67,5 @@ hugo_sites:
 static_wp_sites:
   - subdomain: static
     domain_name: skyfaller.space
+  - subdomain: static
+    domain_name: stairball.org
