--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -109,10 +109,11 @@
   hostname:
     name: "{{ local_hostname }}"
     # use: redhat # required on Alpine Linux: https://github.com/ansible/ansible/issues/77363
-    # only for Ansible versions < 2.12.5 tho
+    # only for Ansible versions < 2.12.5 tho?
+    # This workaround may have stopped working in 2.12.5 w/o the bug being fixed
   tags:
   - hostname
-  when: ansible_os_family != 'Alpine'
+  # when: ansible_os_family != 'Alpine'
 
 # - name: pop OS hostname
 #   hostname:
