add Hugo site to test Bookshop
This shouldn't be a functional Bookshop site after running these
steps, I believe we'll have to run a bunch of NPM commands next:
https://github.com/CloudCannon/bookshop/blob/main/guides/hugo.adoc#creating-your-bookshop

--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -51,6 +51,10 @@ hugo_sites:
     content_repo: https://git.sr.ht/~skyfaller/maximum-ethics-content
     # theme_repo: https://git.sr.ht/~skyfaller/maxethics-hugo
     # theme_name: maxethics-hugo
+  - title: Bookshop Demo
+    domain: maximumethics.dev
+    subdomain: bookshop
+    content_repo: https://github.com/CloudCannon/hugo-bookshop-starter/
   - title: Nelson's minimal Hugo website
     domain: pavlosky.net
     subdomain: nelson
