--- a/roles/sunrise/vars/Fedora.yml
+++ b/roles/sunrise/vars/Fedora.yml
@@ -1,4 +1,5 @@
 os_packages:
+  - eza # ls alternative
   - fd-find # find alternative
   - golang # needed to build Caddy from source or use Hugo modules
   - php
