create user for Rob, give admins group privs

--- a/roles/new-linode_initiate-users/tasks/main.yml
+++ b/roles/new-linode_initiate-users/tasks/main.yml
@@ -48,7 +48,7 @@
   user:
     name: "{{ item.name }}"
     password: "{{ item.password }}"
-    groups: wheel
+    groups: wheel,mcfadden
     append: yes
     update_password: on_create
   loop: "{{ self_excluded_users }}"
