--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -32,6 +32,11 @@ users:
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOs89w1+6svcRASva821bysSFAG2qFO93qwmco3Fj/U7 u0_a314@localhost
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIA3Ktn0c3pSic0v1rtaRrxJ2O+9XbuyNawjj91A/D3Wf GitHub key for nelson@bobbie
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBNayoJ5sgtQjjhfzWbck7ZShYAz+fLaitVogO5qBzqh Linode key for larkspur
+  - name: rmcfadden
+    password: "{{ default_pass }}"
+    shell: /usr/bin/fish
+    sshKey:
+      - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIAlQKbqOw+ahIcruetY41Swf4E6tCRUhx/LdnpzEg6UR rmcfadden@RMcFadden
 
 test_domain: maximumethics.dev
 test_subdomain: test
