--- a/roles/new-linode_initiate-users/vars/main.yml
+++ b/roles/new-linode_initiate-users/vars/main.yml
@@ -17,5 +17,10 @@ users:
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOs89w1+6svcRASva821bysSFAG2qFO93qwmco3Fj/U7 u0_a314@localhost
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIA3Ktn0c3pSic0v1rtaRrxJ2O+9XbuyNawjj91A/D3Wf GitHub key for nelson@bobbie
       - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBNayoJ5sgtQjjhfzWbck7ZShYAz+fLaitVogO5qBzqh Linode key for larkspur
+  - name: rmcfadden
+    password: "{{ default_pass }}"
+    shell: /usr/bin/fish
+    sshKey:
+      - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIAlQKbqOw+ahIcruetY41Swf4E6tCRUhx/LdnpzEg6UR rmcfadden@RMcFadden
 
 default_pass: "$6$mysecretsalt$KX2mLFmN1x9gF/urPk7EpzaMJMcY4yoFetMlQw0W9Lm2MJZ8cVI/7dk25PVyb6cLx7IUwTxON5HucMHOdsP.Y0"
