--- a/roles/new-linode_initiate-users/tasks/main.yml
+++ b/roles/new-linode_initiate-users/tasks/main.yml
@@ -30,6 +30,12 @@
     line: '%wheel ALL=(ALL) ALL'
     validate: 'visudo -cf %s'
 
+#TODO: Add groups from a list in a variable instead of hardcoding it
+- name: Ensure group "mcfadden" exists
+  ansible.builtin.group:
+    name: mcfadden
+    state: present
+
 - name: print users
   debug:
     var: users
@@ -44,6 +50,7 @@
     _list: |-
       - {{ item }}
 
+#TODO: Add users to groups from a list in a variable instead of hardcoding it
 - name: Add sudoing user accounts for sysadmins (other than you)
   user:
     name: "{{ item.name }}"
@@ -59,7 +66,7 @@
   user:
     name: "{{ prompt_user }}"
     password: "{{ prompt_password }}"
-    groups: wheel
+    groups: wheel,mcfadden
     append: yes
   tags: add_users
 
