new-linode: *properly* exclude self from list
Previously, we were trying to build a list iteratively through a loop,
but we incorrectly reset the list each time, so that there could never
be more than one entry. Now instead we create a new list with a filter

https://serverfault.com/questions/969263/reject-in-ansible-list-variable

--- a/roles/new-linode_initiate-users/tasks/main.yml
+++ b/roles/new-linode_initiate-users/tasks/main.yml
@@ -43,12 +43,12 @@
 
 - name: create temporary list of users, excluding the admin running this role
   set_fact:
-    self_excluded_users: "{{ _list | from_yaml }}"
-  loop: "{{ users }}"
-  when: item.name != prompt_user
-  vars:
-    _list: |-
-      - {{ item }}
+    not_me: "{{ users | rejectattr('name', 'match', '^'+prompt_user+'$') | list }}"
+
+- name: print not_me
+  debug:
+    var: not_me
+    verbosity: 2
 
 #TODO: Add users to groups from a list in a variable instead of hardcoding it
 - name: Add sudoing user accounts for sysadmins (other than you)
@@ -58,7 +58,7 @@
     groups: wheel,mcfadden
     append: yes
     update_password: on_create
-  loop: "{{ self_excluded_users }}"
+  loop: "{{ not_me }}"
   register: new_accounts
   tags: add_users
 
