packages: neofetch replaced by fastfetch
neofetch is no longer maintained, so it has been removed from faster
distros like Arch and Alpine. fastfetch seems like the best maintained
alternative, and it is in fact faster.

https://github.com/fastfetch-cli/fastfetch

I guess we keep using neofetch in slow Debian.

--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -5,6 +5,7 @@ os_packages:
   - fd # find alternative
   - tealdeer # A fast tldr client in Rust
   - chezmoi # bring your personal dotfiles to the server
+  - fastfetch # show OS details
   - rsync # dependency for "synchronize" Ansible module
   - php
   - php-fpm # serve PHP sites via FastCGI
