--- a/roles/sunrise/vars/Alpine.yml
+++ b/roles/sunrise/vars/Alpine.yml
@@ -7,6 +7,7 @@ os_packages:
   - chezmoi # bring your personal dotfiles to the server
   - dust # visualize disk space use
   - eza # ls alternative
+  - fastfetch # show OS details
   - fd # find alternative
   - caddy # web server https://caddyserver.com/
   - caddy-openrc # try installing default OpenRC init scripts, might clash with Caddyfile
