Arch: uninstall linux-firmware package
linux-firmware gets stuck when updating and interferes with updating
all other packages, and it's not necessary according to someone in
the Linode IRC channel (and my experience).

An alternative would be to uninstall and reinstall it, but why bother
if we don't need it at all?

--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -14,6 +14,9 @@ os_packages:
   - hugo # static site generator https://gohugo.io/
   - nodejs # needed for Bookshop
 
+uninstall_packages:
+  - linux-firmware # Unnecessary on Linode, needed on bare metal tho
+
 web_server_user: caddy
 
 caddy_binary_location: /usr/bin/caddy
