timezone: now based on location of each server
Now we must remember to add a timezone to the inventory for each
server, which may be more work but seems better than arbitrarily
declaring New York as the timezone for servers that could be located
anywhere.

--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -138,10 +138,10 @@
   - timezone
   - local
 # to get list of possible timezones, run "timedatectl list-timezones"
-- name: set timezone to NYC
+- name: set timezone (from inventory)
   timezone:
-    name: America/New_York
-    # name: America/Los_Angeles
+    name: "{{ local_timezone }}"
+    # name: America/Chicago
   tags:
   - timezone
   notify:
